<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="horizontal" android:padding="4dp">

    <ImageView 
        android:id="@+id/ivPic"
        android:contentDescription="image"
        android:src="@drawable/contact"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
      	android:layout_weight="1"
      	android:padding="5dp">
    </ImageView>
   
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_weight="4"
        android:padding="5dp"
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/tvName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/rowName"
            android:textSize="10dp" >

        </TextView>
        
         <TextView
             android:id="@+id/tvPhone"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical|left"
             android:text="@string/rowPhone"
             android:textSize="8dp" >

        </TextView>    
    </LinearLayout>
  
     <TextView
         android:id="@+id/tvExtras"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"
         android:gravity="center"
         android:text="@string/rowExtras"
         android:textSize="20dp" >

     </TextView>
     
     <ImageView 
        android:id="@+id/ivAttend"
        android:contentDescription="image"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:src="@drawable/tick"
      	android:layout_weight="1">
    </ImageView>
    
     <ImageButton
        android:id="@+id/ibPhone"
        android:contentDescription="image"
        android:layout_width="0dp"
        android:src="@drawable/blower"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:background="@null"
      	android:layout_weight="1">
    </ImageButton>
</LinearLayout>